// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildOverlayPrompt > snapshots the prompt for a base context 1`] = `
"You are a thumbnail text-overlay designer. You will receive a thumbnail image. Analyze it and generate exactly 4 self-contained HTML text overlays.

## Image Analysis

Study the provided thumbnail carefully:
- Identify the focal subject — the main visual element the viewer's eye goes to.
- Map dark zones, light zones, busy areas, and empty/low-detail areas.
- Each variant must place text in a DIFFERENT viable zone based on your analysis.
- NEVER place text over the focal subject.

## Text Content

Game: "Crosshair X".
- Hero text: 2–4 words maximum. Distill the announcement into a punchy, attention-grabbing phrase. Not the full title — a short summary.
- Brand name: "Crosshair X" — small, positioned in a corner, never competing with hero text.
- Subtitle (optional): 3–6 words expanding on the hero if space allows.
- No feature lists, no body copy, no URLs.

## Typography

- Base font: \`system-ui, sans-serif\`. If this requires Google Fonts, include ONE \`<link>\` tag at the top of the overlay div.
- Hero: \`font-weight:900\`, \`font-size:140px\` (adjust within 120–160px range), \`paint-order:stroke fill\`, \`-webkit-text-stroke:4px rgba(0,0,0,0.5)\` for thick outlines.
- Brand name: \`font-size:20px\`, \`font-weight:700\`, \`letter-spacing:3px\`.
- Subtitle: \`font-size:32px\`, \`font-weight:700\`.

## Colors

Auto-extracted palette: primary #1a1a1a, secondary #2a2a2a, accent #ff0044, neutral #cccccc.
- Hero text: white (\`#ffffff\`) or the brand primary color — pick whichever has better contrast against the placement zone.
- Accent elements (subtitle, highlights): use the accent or secondary color.
- Brand name supports mixed color via \`<span>\` — e.g. white text with one word in the accent color.
- Respect the palette mood: vibrant vibrancy, dark luminance. Muted palettes → subtler overlays. Vibrant palettes → bolder pops.

## Layout Variation

- You decide layout based on the image — no prescribed patterns.
- Analyze the thumbnail and find open zones, dark regions, and low-detail areas.
- Each of the 4 variants MUST use a meaningfully different text placement strategy so the user has real choices.
- Consider: bottom-heavy, top-heavy, left-aligned, right-aligned, centered, split, angled — whatever the image supports.

## Gradient Overlays

- You decide whether a gradient overlay is needed. If the text zone already has enough contrast, skip it.
- When used: the gradient div sits between the image layer and text layers (\`position:absolute; inset:0\`).
- Gradient direction must follow text placement (text at bottom → fade from bottom, text at top → fade from top).
- Start with \`rgba(0,0,0,0.5)\` to \`transparent\` — adjust opacity based on how busy the underlying region is.
- The gradient div must carry \`data-layer="gradient"\`.

## Output Format

For EACH variant, output a comment header followed by a fenced HTML block:

<!-- variant: ShortName | one-line rationale explaining the placement choice -->
\`\`\`html
<div style="position:relative; width:1920px; height:1080px; overflow:hidden; font-family:'system-ui',system-ui, sans-serif;">
  <!-- gradient overlay if needed, with data-layer="gradient" -->
  <!-- text layers with data-layer="hero", data-layer="subtitle", data-layer="brand" -->
</div>
\`\`\`

Rules:
- Root element: \`div\` with explicit \`width:1920px; height:1080px; position:relative; overflow:hidden\`.
- The HTML is an OVERLAY ONLY — do NOT include the background image. The extension composites it.
- Every text element MUST have a \`data-layer\` attribute: \`"hero"\`, \`"subtitle"\`, or \`"brand"\`.
- All styles inline. No \`<style>\` tags, no CSS classes, no JavaScript, no animations.
- No \`<img>\` tags — text and gradients only.
- Only external resource allowed: one Google Fonts \`<link>\` tag if the font requires it.

Generate exactly 4 variants now."
`;

exports[`buildOverlayPrompt > snapshots with announcement title and user prompt 1`] = `
"You are a thumbnail text-overlay designer. You will receive a thumbnail image. Analyze it and generate exactly 4 self-contained HTML text overlays.

## Image Analysis

Study the provided thumbnail carefully:
- Identify the focal subject — the main visual element the viewer's eye goes to.
- Map dark zones, light zones, busy areas, and empty/low-detail areas.
- Each variant must place text in a DIFFERENT viable zone based on your analysis.
- NEVER place text over the focal subject.

## Text Content

Game: "Crosshair X".
Announcement title: "Season 3 Launch".
User direction: "make it bold and aggressive".
- Hero text: 2–4 words maximum. Distill the announcement into a punchy, attention-grabbing phrase. Not the full title — a short summary.
- Brand name: "Crosshair X" — small, positioned in a corner, never competing with hero text.
- Subtitle (optional): 3–6 words expanding on the hero if space allows.
- No feature lists, no body copy, no URLs.

## Typography

- Base font: \`system-ui, sans-serif\`. If this requires Google Fonts, include ONE \`<link>\` tag at the top of the overlay div.
- Hero: \`font-weight:900\`, \`font-size:140px\` (adjust within 120–160px range), \`paint-order:stroke fill\`, \`-webkit-text-stroke:4px rgba(0,0,0,0.5)\` for thick outlines.
- Brand name: \`font-size:20px\`, \`font-weight:700\`, \`letter-spacing:3px\`.
- Subtitle: \`font-size:32px\`, \`font-weight:700\`.

## Colors

Auto-extracted palette: primary #1a1a1a, secondary #2a2a2a, accent #ff0044, neutral #cccccc.
- Hero text: white (\`#ffffff\`) or the brand primary color — pick whichever has better contrast against the placement zone.
- Accent elements (subtitle, highlights): use the accent or secondary color.
- Brand name supports mixed color via \`<span>\` — e.g. white text with one word in the accent color.
- Respect the palette mood: vibrant vibrancy, dark luminance. Muted palettes → subtler overlays. Vibrant palettes → bolder pops.

## Layout Variation

- You decide layout based on the image — no prescribed patterns.
- Analyze the thumbnail and find open zones, dark regions, and low-detail areas.
- Each of the 4 variants MUST use a meaningfully different text placement strategy so the user has real choices.
- Consider: bottom-heavy, top-heavy, left-aligned, right-aligned, centered, split, angled — whatever the image supports.

## Gradient Overlays

- You decide whether a gradient overlay is needed. If the text zone already has enough contrast, skip it.
- When used: the gradient div sits between the image layer and text layers (\`position:absolute; inset:0\`).
- Gradient direction must follow text placement (text at bottom → fade from bottom, text at top → fade from top).
- Start with \`rgba(0,0,0,0.5)\` to \`transparent\` — adjust opacity based on how busy the underlying region is.
- The gradient div must carry \`data-layer="gradient"\`.

## Output Format

For EACH variant, output a comment header followed by a fenced HTML block:

<!-- variant: ShortName | one-line rationale explaining the placement choice -->
\`\`\`html
<div style="position:relative; width:1920px; height:1080px; overflow:hidden; font-family:'system-ui',system-ui, sans-serif;">
  <!-- gradient overlay if needed, with data-layer="gradient" -->
  <!-- text layers with data-layer="hero", data-layer="subtitle", data-layer="brand" -->
</div>
\`\`\`

Rules:
- Root element: \`div\` with explicit \`width:1920px; height:1080px; position:relative; overflow:hidden\`.
- The HTML is an OVERLAY ONLY — do NOT include the background image. The extension composites it.
- Every text element MUST have a \`data-layer\` attribute: \`"hero"\`, \`"subtitle"\`, or \`"brand"\`.
- All styles inline. No \`<style>\` tags, no CSS classes, no JavaScript, no animations.
- No \`<img>\` tags — text and gradients only.
- Only external resource allowed: one Google Fonts \`<link>\` tag if the font requires it.

Generate exactly 4 variants now."
`;

exports[`buildOverlayPrompt > snapshots with curated brand colors 1`] = `
"You are a thumbnail text-overlay designer. You will receive a thumbnail image. Analyze it and generate exactly 4 self-contained HTML text overlays.

## Image Analysis

Study the provided thumbnail carefully:
- Identify the focal subject — the main visual element the viewer's eye goes to.
- Map dark zones, light zones, busy areas, and empty/low-detail areas.
- Each variant must place text in a DIFFERENT viable zone based on your analysis.
- NEVER place text over the focal subject.

## Text Content

Game: "Crosshair X".
- Hero text: 2–4 words maximum. Distill the announcement into a punchy, attention-grabbing phrase. Not the full title — a short summary.
- Brand name: "Crosshair X" — small, positioned in a corner, never competing with hero text.
- Subtitle (optional): 3–6 words expanding on the hero if space allows.
- No feature lists, no body copy, no URLs.

## Typography

- Base font: \`system-ui, sans-serif\`. If this requires Google Fonts, include ONE \`<link>\` tag at the top of the overlay div.
- Hero: \`font-weight:900\`, \`font-size:140px\` (adjust within 120–160px range), \`paint-order:stroke fill\`, \`-webkit-text-stroke:4px rgba(0,0,0,0.5)\` for thick outlines.
- Brand name: \`font-size:20px\`, \`font-weight:700\`, \`letter-spacing:3px\`.
- Subtitle: \`font-size:32px\`, \`font-weight:700\`.

## Colors

Auto-extracted palette: primary #1a1a1a, secondary #2a2a2a, accent #ff0044, neutral #cccccc.
The user has explicitly chosen these brand colors — prefer them over auto-extracted for the roles they specify:
  - primary (orange brand): #e8622d
  - accent (cyan): #5ec4d4
- Hero text: white (\`#ffffff\`) or the brand primary color — pick whichever has better contrast against the placement zone.
- Accent elements (subtitle, highlights): use the accent or secondary color.
- Brand name supports mixed color via \`<span>\` — e.g. white text with one word in the accent color.
- Respect the palette mood: vibrant vibrancy, dark luminance. Muted palettes → subtler overlays. Vibrant palettes → bolder pops.

## Layout Variation

- You decide layout based on the image — no prescribed patterns.
- Analyze the thumbnail and find open zones, dark regions, and low-detail areas.
- Each of the 4 variants MUST use a meaningfully different text placement strategy so the user has real choices.
- Consider: bottom-heavy, top-heavy, left-aligned, right-aligned, centered, split, angled — whatever the image supports.

## Gradient Overlays

- You decide whether a gradient overlay is needed. If the text zone already has enough contrast, skip it.
- When used: the gradient div sits between the image layer and text layers (\`position:absolute; inset:0\`).
- Gradient direction must follow text placement (text at bottom → fade from bottom, text at top → fade from top).
- Start with \`rgba(0,0,0,0.5)\` to \`transparent\` — adjust opacity based on how busy the underlying region is.
- The gradient div must carry \`data-layer="gradient"\`.

## Output Format

For EACH variant, output a comment header followed by a fenced HTML block:

<!-- variant: ShortName | one-line rationale explaining the placement choice -->
\`\`\`html
<div style="position:relative; width:1920px; height:1080px; overflow:hidden; font-family:'system-ui',system-ui, sans-serif;">
  <!-- gradient overlay if needed, with data-layer="gradient" -->
  <!-- text layers with data-layer="hero", data-layer="subtitle", data-layer="brand" -->
</div>
\`\`\`

Rules:
- Root element: \`div\` with explicit \`width:1920px; height:1080px; position:relative; overflow:hidden\`.
- The HTML is an OVERLAY ONLY — do NOT include the background image. The extension composites it.
- Every text element MUST have a \`data-layer\` attribute: \`"hero"\`, \`"subtitle"\`, or \`"brand"\`.
- All styles inline. No \`<style>\` tags, no CSS classes, no JavaScript, no animations.
- No \`<img>\` tags — text and gradients only.
- Only external resource allowed: one Google Fonts \`<link>\` tag if the font requires it.

Generate exactly 4 variants now."
`;
